// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<Dropdown
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={null}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "id-0",
        "label": "Item 0",
        "value": 0,
      },
      Object {
        "id": "id-1",
        "label": "Item 1",
        "value": 1,
      },
      Object {
        "id": "id-2",
        "label": "Item 2",
        "value": 2,
      },
      Object {
        "id": "id-3",
        "label": "Item 3",
        "value": 3,
      },
      Object {
        "id": "id-4",
        "label": "Item 4",
        "value": 4,
      },
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="bx--dropdown__wrapper bx--list-box__wrapper"
  >
    <Downshift
      breakingChanges={Object {}}
      defaultHighlightedIndex={null}
      defaultInputValue=""
      defaultIsOpen={false}
      defaultSelectedItem={null}
      environment={[Window]}
      getA11yStatusMessage={[Function]}
      itemToString={[Function]}
      onChange={[Function]}
      onInputValueChange={[Function]}
      onOuterClick={[Function]}
      onSelect={[Function]}
      onStateChange={[Function]}
      onUserAction={[Function]}
      selectedItemChanged={[Function]}
      stateReducer={[Function]}
    >
      <ListBox
        className="bx--dropdown"
        disabled={false}
        id="test-dropdown"
        innerRef={[Function]}
        isOpen={false}
        type="default"
      >
        <div
          className="bx--dropdown bx--list-box"
          id="test-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="listbox"
          tabIndex="-1"
        >
          <ListBoxField
            aria-expanded={false}
            aria-haspopup={true}
            aria-label="open menu"
            data-toggle={true}
            disabled={false}
            id="test-dropdown"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <div
              aria-controls="test-dropdown__menu"
              aria-expanded={false}
              aria-haspopup={true}
              aria-label="open menu"
              aria-owns="test-dropdown__menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-1-input"
              >
                input
              </span>
              <ListBoxMenuIcon
                isOpen={false}
                translateWithId={[Function]}
              >
                <div
                  className="bx--list-box__menu-icon"
                  role="button"
                >
                  <ChevronDown16
                    aria-label="Open menu"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-label="Open menu"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Open menu
                      </title>
                      <path
                        d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                      />
                    </svg>
                  </ChevronDown16>
                </div>
              </ListBoxMenuIcon>
            </div>
          </ListBoxField>
        </div>
      </ListBox>
    </Downshift>
  </div>
</Dropdown>
`;

exports[`Dropdown should render custom item components 1`] = `
<Dropdown
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={[Function]}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "id-0",
        "label": "Item 0",
        "value": 0,
      },
      Object {
        "id": "id-1",
        "label": "Item 1",
        "value": 1,
      },
      Object {
        "id": "id-2",
        "label": "Item 2",
        "value": 2,
      },
      Object {
        "id": "id-3",
        "label": "Item 3",
        "value": 3,
      },
      Object {
        "id": "id-4",
        "label": "Item 4",
        "value": 4,
      },
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="bx--dropdown__wrapper bx--list-box__wrapper"
  >
    <Downshift
      breakingChanges={Object {}}
      defaultHighlightedIndex={null}
      defaultInputValue=""
      defaultIsOpen={false}
      defaultSelectedItem={null}
      environment={[Window]}
      getA11yStatusMessage={[Function]}
      itemToString={[Function]}
      onChange={[Function]}
      onInputValueChange={[Function]}
      onOuterClick={[Function]}
      onSelect={[Function]}
      onStateChange={[Function]}
      onUserAction={[Function]}
      selectedItemChanged={[Function]}
      stateReducer={[Function]}
    >
      <ListBox
        className="bx--dropdown bx--dropdown--open"
        disabled={false}
        id="test-dropdown"
        innerRef={[Function]}
        isOpen={true}
        type="default"
      >
        <div
          className="bx--dropdown bx--dropdown--open bx--list-box bx--list-box--expanded"
          id="test-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="listbox"
          tabIndex="-1"
        >
          <ListBoxField
            aria-expanded={true}
            aria-haspopup={true}
            aria-label="close menu"
            data-toggle={true}
            disabled={false}
            id="test-dropdown"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <div
              aria-controls="test-dropdown__menu"
              aria-expanded={true}
              aria-haspopup={true}
              aria-label="close menu"
              aria-owns="test-dropdown__menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-5-input"
              >
                input
              </span>
              <ListBoxMenuIcon
                isOpen={true}
                translateWithId={[Function]}
              >
                <div
                  className="bx--list-box__menu-icon bx--list-box__menu-icon--open"
                  role="button"
                >
                  <ChevronDown16
                    aria-label="Close menu"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-label="Close menu"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Close menu
                      </title>
                      <path
                        d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                      />
                    </svg>
                  </ChevronDown16>
                </div>
              </ListBoxMenuIcon>
            </div>
          </ListBoxField>
          <ListBoxMenu
            id="test-dropdown"
          >
            <div
              className="bx--list-box__menu"
              id="test-dropdown__menu"
              role="listbox"
            >
              <ListBoxMenuItem
                id="downshift-5-item-0"
                isActive={false}
                isHighlighted={false}
                key="Item 0"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-5-item-0"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    <itemToElement
                      id="id-0"
                      key="Item 0"
                      label="Item 0"
                      value={0}
                    >
                      <div
                        className="mock-item"
                      >
                        Item 0
                      </div>
                    </itemToElement>
                  </div>
                </div>
              </ListBoxMenuItem>
              <ListBoxMenuItem
                id="downshift-5-item-1"
                isActive={false}
                isHighlighted={false}
                key="Item 1"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-5-item-1"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    <itemToElement
                      id="id-1"
                      key="Item 1"
                      label="Item 1"
                      value={1}
                    >
                      <div
                        className="mock-item"
                      >
                        Item 1
                      </div>
                    </itemToElement>
                  </div>
                </div>
              </ListBoxMenuItem>
              <ListBoxMenuItem
                id="downshift-5-item-2"
                isActive={false}
                isHighlighted={false}
                key="Item 2"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-5-item-2"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    <itemToElement
                      id="id-2"
                      key="Item 2"
                      label="Item 2"
                      value={2}
                    >
                      <div
                        className="mock-item"
                      >
                        Item 2
                      </div>
                    </itemToElement>
                  </div>
                </div>
              </ListBoxMenuItem>
              <ListBoxMenuItem
                id="downshift-5-item-3"
                isActive={false}
                isHighlighted={false}
                key="Item 3"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-5-item-3"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    <itemToElement
                      id="id-3"
                      key="Item 3"
                      label="Item 3"
                      value={3}
                    >
                      <div
                        className="mock-item"
                      >
                        Item 3
                      </div>
                    </itemToElement>
                  </div>
                </div>
              </ListBoxMenuItem>
              <ListBoxMenuItem
                id="downshift-5-item-4"
                isActive={false}
                isHighlighted={false}
                key="Item 4"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-5-item-4"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    <itemToElement
                      id="id-4"
                      key="Item 4"
                      label="Item 4"
                      value={4}
                    >
                      <div
                        className="mock-item"
                      >
                        Item 4
                      </div>
                    </itemToElement>
                  </div>
                </div>
              </ListBoxMenuItem>
            </div>
          </ListBoxMenu>
        </div>
      </ListBox>
    </Downshift>
  </div>
</Dropdown>
`;

exports[`Dropdown should render with strings as items 1`] = `
<Dropdown
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={null}
  itemToString={[Function]}
  items={
    Array [
      "zar",
      "doz",
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="bx--dropdown__wrapper bx--list-box__wrapper"
  >
    <Downshift
      breakingChanges={Object {}}
      defaultHighlightedIndex={null}
      defaultInputValue=""
      defaultIsOpen={false}
      defaultSelectedItem={null}
      environment={[Window]}
      getA11yStatusMessage={[Function]}
      itemToString={[Function]}
      onChange={[Function]}
      onInputValueChange={[Function]}
      onOuterClick={[Function]}
      onSelect={[Function]}
      onStateChange={[Function]}
      onUserAction={[Function]}
      selectedItemChanged={[Function]}
      stateReducer={[Function]}
    >
      <ListBox
        className="bx--dropdown bx--dropdown--open"
        disabled={false}
        id="test-dropdown"
        innerRef={[Function]}
        isOpen={true}
        type="default"
      >
        <div
          className="bx--dropdown bx--dropdown--open bx--list-box bx--list-box--expanded"
          id="test-dropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="listbox"
          tabIndex="-1"
        >
          <ListBoxField
            aria-expanded={true}
            aria-haspopup={true}
            aria-label="close menu"
            data-toggle={true}
            disabled={false}
            id="test-dropdown"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <div
              aria-controls="test-dropdown__menu"
              aria-expanded={true}
              aria-haspopup={true}
              aria-label="close menu"
              aria-owns="test-dropdown__menu"
              className="bx--list-box__field"
              data-toggle={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex="0"
              type="button"
            >
              <span
                className="bx--list-box__label"
                htmlFor="downshift-4-input"
              >
                input
              </span>
              <ListBoxMenuIcon
                isOpen={true}
                translateWithId={[Function]}
              >
                <div
                  className="bx--list-box__menu-icon bx--list-box__menu-icon--open"
                  role="button"
                >
                  <ChevronDown16
                    aria-label="Close menu"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-label="Close menu"
                      focusable="false"
                      height={16}
                      name="chevron--down"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 16 16"
                      width={16}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <title>
                        Close menu
                      </title>
                      <path
                        d="M8 11L3 6l.7-.7L8 9.6l4.3-4.3.7.7z"
                      />
                    </svg>
                  </ChevronDown16>
                </div>
              </ListBoxMenuIcon>
            </div>
          </ListBoxField>
          <ListBoxMenu
            id="test-dropdown"
          >
            <div
              className="bx--list-box__menu"
              id="test-dropdown__menu"
              role="listbox"
            >
              <ListBoxMenuItem
                id="downshift-4-item-0"
                isActive={false}
                isHighlighted={false}
                key="zar"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-4-item-0"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    zar
                  </div>
                </div>
              </ListBoxMenuItem>
              <ListBoxMenuItem
                id="downshift-4-item-1"
                isActive={false}
                isHighlighted={false}
                key="doz"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
              >
                <div
                  className="bx--list-box__menu-item"
                  id="downshift-4-item-1"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onMouseMove={[Function]}
                >
                  <div
                    className="bx--list-box__menu-item__option"
                  >
                    doz
                  </div>
                </div>
              </ListBoxMenuItem>
            </div>
          </ListBoxMenu>
        </div>
      </ListBox>
    </Downshift>
  </div>
</Dropdown>
`;
